[package]
name = "mas-static-files"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"

[features]
dev = []

[dependencies]
axum = "0.5.4"
headers = "0.3.7"
http = "0.2.6"
mime_guess = "2.0.4"
rust-embed = "6.4.0"
tokio = { version = "1.17.0", features = ["fs"] }
tower = "0.4.12"
