[package]
name = "mas-static-files"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"

[features]
dev = []

[dependencies]
axum = "0.5.6"
headers = "0.3.7"
http = "0.2.7"
http-body = "0.4.5"
mime_guess = "2.0.4"
rust-embed = "6.4.0"
tower = "0.4.12"
tower-http = { version = "0.3.4", features = ["fs"] }
tracing = "0.1.34"
