[package]
name = "mas-storage-pg"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.74"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "json", "uuid", "ipnetwork"] }
sea-query = { version = "0.30.3", features = ["derive", "attr", "with-uuid", "with-chrono", "postgres-array"] }
sea-query-binder = { version = "0.5.0", features = ["sqlx-postgres", "with-uuid", "with-chrono", "postgres-array"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-util = "0.3.29"

rand.workspace = true
rand_chacha = "0.3.1"
url.workspace = true
uuid = "1.6.1"
ulid = { workspace = true, features = ["uuid"] }

oauth2-types = { path = "../oauth2-types" }
mas-storage = { path = "../storage" }
mas-data-model = { path = "../data-model" }
mas-iana = { path = "../iana" }
mas-jose = { path = "../jose" }
