[package]
name = "mas-storage-pg"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-util = "0.3.30"
opentelemetry-semantic-conventions.workspace = true

rand.workspace = true
rand_chacha = "0.3.1"
url.workspace = true
uuid = "1.10.0"
ulid = { workspace = true, features = ["uuid"] }

oauth2-types.workspace = true
mas-storage.workspace = true
mas-data-model.workspace = true
mas-iana.workspace = true
mas-jose.workspace = true
