[package]
name = "mas-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.74"
chrono.workspace = true
thiserror.workspace = true
futures-util = "0.3.28"

apalis-core = { version = "0.4.5", features = ["tokio-comp"] }
opentelemetry = "0.20.0"
rand_core = "0.6.4"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.21.0"
url.workspace = true
ulid.workspace = true

oauth2-types = { path = "../oauth2-types" }
mas-data-model = { path = "../data-model" }
mas-iana = { path = "../iana" }
mas-jose = { path = "../jose" }
