[package]
name = "mas-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait = "0.1.77"
chrono.workspace = true
thiserror.workspace = true
futures-util = "0.3.30"

apalis-core = { version = "0.4.9", features = ["tokio-comp"] }
opentelemetry.workspace = true
rand_core = "0.6.4"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
url.workspace = true
ulid.workspace = true

oauth2-types.workspace = true
mas-data-model.workspace = true
mas-iana.workspace = true
mas-jose.workspace = true
