[package]
name = "mas-tasks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
apalis-core = { version = "0.4.6", features = ["extensions", "tokio-comp", "storage"] }
apalis-cron = "0.4.6"
async-stream = "0.3.5"
async-trait = "0.1.74"
chrono.workspace = true
event-listener = "3.0.1"
futures-lite = "2.0.1"
rand.workspace = true
rand_chacha = "0.3.1"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres"] }
thiserror.workspace = true
tokio = { version = "1.33.0", features = ["rt"] }
tower = "0.4.13"
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
ulid.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true

mas-data-model = { path = "../data-model" }
mas-email = { path = "../email" }
mas-i18n = { path = "../i18n" }
mas-matrix = { path = "../matrix" }
mas-storage = { path = "../storage" }
mas-storage-pg = { path = "../storage-pg" }
mas-templates = { path = "../templates" }
mas-tower = { path = "../tower" }
