[package]
name = "mas-tasks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
apalis-core = { version = "0.4.9", features = ["extensions", "tokio-comp", "storage"] }
apalis-cron = "0.4.9"
async-stream = "0.3.5"
async-trait = "0.1.77"
chrono.workspace = true
event-listener = "4.0.3"
futures-lite = "2.2.0"
rand.workspace = true
rand_chacha = "0.3.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
thiserror.workspace = true
tokio = { version = "1.35.1", features = ["rt"] }
tower = "0.4.13"
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
ulid.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true

mas-data-model.workspace = true
mas-email.workspace = true
mas-i18n.workspace = true
mas-matrix.workspace = true
mas-storage.workspace = true
mas-storage-pg.workspace = true
mas-templates.workspace = true
mas-tower.workspace = true
