[package]
name = "mas-tasks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
apalis-core = { version = "0.4.9", features = ["extensions", "tokio-comp", "storage"] }
apalis-cron = "0.4.9"
async-stream = "0.3.5"
async-trait.workspace = true
chrono.workspace = true
event-listener = "5.3.0"
futures-lite = "2.3.0"
rand.workspace = true
rand_chacha = "0.3.1"
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
ulid.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true

mas-data-model.workspace = true
mas-email.workspace = true
mas-i18n.workspace = true
mas-matrix.workspace = true
mas-router.workspace = true
mas-storage.workspace = true
mas-storage-pg.workspace = true
mas-templates.workspace = true
mas-tower.workspace = true
